@@ -160,11 +160,16 @@ function ossn_like_annotation($hook, $type, $return, $params) {
         $database->statement("SELECT * FROM ossn_entities WHERE(guid='{$notif->subject_guid}')");
         $database->execute();
         $result = $database->fetch();
-
         $url = ossn_site_url("post/view/{$notif->subject_guid}#comments-item-{$notif->item_guid}");
         if ($result->subtype == 'file:ossn:aphoto') {
             $url = ossn_site_url("photos/view/{$notif->subject_guid}#comments-item-{$notif->item_guid}");
         }
+        if ($result->subtype == 'file:profile:photo') {
+            $url = ossn_site_url("photos/user/view/{$notif->subject_guid}#comments-item-{$notif->item_guid}");
+        }	
+        if ($result->subtype == 'file:profile:cover') {
+            $url = ossn_site_url("photos/cover/view/{$notif->subject_guid}#comments-item-{$notif->item_guid}");
+        }			
     }
     $type = "<div class='ossn-notification-icon-{$type}'></div>";
     if ($notif->viewed !== NULL) {
